--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <option value="movie">Movie</option>
           </select>
 
-
+        <button type="submit" class="btn btn-info">Calculate personality</button>
 
         </form>
 
