cant find my way around this

--- a/index.html
+++ b/index.html
@@ -14,55 +14,55 @@
           <h1 class="panel-heading">Which character from<em>"the Office"</em>are you?</h1>
         </div>
         <div class="panel panel-body">
-          <form class="form-group">
+          <form id="form-group">
 
             <label for="leaderQ">In a high pressure situation, which best describes you?</label>
               <select id="leaderQ">
-                <option value="leader">Leader</option>
-                <option value="follower">Follower</option>
+                <option id="leader" value="leader">Leader</option>
+                <option id="follower" value="follower">Follower</option>
               </select>
 
             <label for="intelQ">When things get complicated - are you?</label>
               <select id="intelQ">
-                <option value="smart">Smart</option>
-                <option value="dumb">Not so smart</option>
+                <option id="smart" value="smart">Smart</option>
+                <option id="dumb" value="dumb">Not so smart</option>
               </select>
 
             <label for="willQ">When times are tough, do you get going?</label>
               <select id="willQ">
-                <option value="strong">Strong Willed</option>
-                <option value="weak">Weak Willed</option>
+                <option id="strong" value="strong">Strong Willed</option>
+                <option id="weak" value="weak">Weak Willed</option>
               </select>
 
             <label for="ballsQ">Are you a rebel or do prefer to be by the book</label>
               <select id="ballsQ">
-                <option value="rebel">Rebel</option>
-                <option value="conform">Conformist</option>
+                <option id="rebel" value="rebel">Rebel</option>
+                <option id="conform" value="conform">Conformist</option>
               </select>
 
             <label for="ambitionQ">Are you a go-getter?</label>
               <select id="ambitionQ">
-                <option value="ambitious">Ambitious</option>
-                <option value="lazy">Lazy</label>
+                <option id="amb" value="ambitious">Ambitious</option>
+                <option id="lazy" value="lazy">Lazy</option>
               </select>
 
             <label for="bookormovie">Do you prefer a good book or a good movie</label>
               <select id="bookormovieQ">
-                <option value="book">Book</option>
-                <option value="movie">Movie</option>
+                <option id="book" value="book">Book</option>
+                <option id="movie" value="movie">Movie</option>
               </select>
 
             <button type="submit" class="btn btn-info">Calculate personality</button>
 
             </form>
 
-            <div id="results">
-              <p>You are<span id="result"></span></p>
+            <div class="result">
+              <p>You are:<span id="result"></span></p>
             </div>
 
               <img src="img/andy.jpg" alt="andy" id="andyb">
               <img src="img/angela.jpg" alt="angela" id="angelam">
-              <img src="img/dwight.jpg" alt="dwight" id="dwights">
+              <img src="img/dwight.jpg" alt="dwight" id="dwights" height="300px" width:"280px" >
               <img src="img/jim.jpeg" alt="jim" id="jimh">
               <img src="img/kevin.jpeg" alt="kevin" id="kevinm">
               <img src="img/michaelscott.png" alt="micheal" id="michaels">
