Still messing with different variable options.

--- a/index.html
+++ b/index.html
@@ -18,38 +18,38 @@
 
             <label for="leaderQ">In a high pressure situation, which best describes you?</label>
               <select id="leaderQ">
-                <option id="leader" value="leader">Leader</option>
-                <option id="follower" value="follower">Follower</option>
+                <option id="leader" value="1">Leader</option>
+                <option id="follower" value="2">Follower</option>
               </select>
 
             <label for="intelQ">When things get complicated - are you?</label>
               <select id="intelQ">
-                <option id="smart" value="smart">Smart</option>
-                <option id="dumb" value="dumb">Not so smart</option>
+                <option id="smart" value="3">Smart</option>
+                <option id="dumb" value="4">Not so smart</option>
               </select>
 
             <label for="willQ">When times are tough, do you get going?</label>
               <select id="willQ">
-                <option id="strong" value="strong">Strong Willed</option>
-                <option id="weak" value="weak">Weak Willed</option>
+                <option id="strong" value="5">Strong Willed</option>
+                <option id="weak" value="6">Weak Willed</option>
               </select>
 
             <label for="ballsQ">Are you a rebel or do prefer to be by the book</label>
               <select id="ballsQ">
-                <option id="rebel" value="rebel">Rebel</option>
-                <option id="conform" value="conform">Conformist</option>
+                <option id="rebel" value="7">Rebel</option>
+                <option id="conform" value="8">Conformist</option>
               </select>
 
             <label for="ambitionQ">Are you a go-getter?</label>
               <select id="ambitionQ">
-                <option id="amb" value="ambitious">Ambitious</option>
-                <option id="lazy" value="lazy">Lazy</option>
+                <option id="ambitious" value="9">Ambitious</option>
+                <option id="lazy" value="10">Lazy</option>
               </select>
 
             <label for="bookormovie">Do you prefer a good book or a good movie</label>
               <select id="bookormovieQ">
-                <option id="book" value="book">Book</option>
-                <option id="movie" value="movie">Movie</option>
+                <option id="book" value="11">Book</option>
+                <option id="movie" value="12">Movie</option>
               </select>
 
             <button type="submit" class="btn btn-info">Calculate personality</button>
