return input values and sent then to an array with specified value but could bot match array with ifThen statement

--- a/index.html
+++ b/index.html
@@ -16,41 +16,33 @@
         <div class="panel panel-body">
           <form id="form-group">
 
-            <label for="leaderQ">In a high pressure situation, which best describes you?</label>
-              <select id="leaderQ">
-                <option id="leader" value="leader">Leader</option>
-                <option id="follower" value="follower">Follower</option>
-              </select>
+            <p>In a high pressure situation, which best describes you?</p>
+                <input type="checkbox" name="characterQ" value="leader">Leader<br>
+                <input type="checkbox" name="characterQ" value="follower">Follower<br>
 
-            <label for="intelQ">When things get complicated - are you?</label>
-              <select id="intelQ">
-                <option id="smart" value="smart">Smart</option>
-                <option id="dumb" value="dumb">Not so smart</option>
-              </select>
 
-            <label for="willQ">When times are tough, do you get going?</label>
-              <select id="willQ">
-                <option id="strong" value="strong">Strong Willed</option>
-                <option id="weak" value="weak">Weak Willed</option>
-              </select>
+            <p>When things get complicated - are you?</p>
+                <input type="checkbox" name="characterQ" value="smart">Smart<br>
+                <input type="checkbox" name="characterQ" value="dumb">Not so smart<br>
 
-            <label for="ballsQ">Are you a rebel or do prefer to be by the book</label>
-              <select id="ballsQ">
-                <option id="rebel" value="rebel">Rebel</option>
-                <option id="conform" value="conform">Conformist</option>
-              </select>
 
-            <label for="ambitionQ">Are you a go-getter?</label>
-              <select id="ambitionQ">
-                <option id="ambitious" value="ambitious">Ambitious</option>
-                <option id="lazy" value="lazy">Lazy</option>
-              </select>
+            <p>When times are tough, do you get going?</p>
+                <input type="checkbox" name="characterQ" value="strong">Strong Willed<br>
+                <input type="checkbox" name="characterQ" value="weak">Weak Willed<br>
 
-            <label for="bookormovie">Do you prefer a good book or a good movie</label>
-              <select id="bookormovieQ">
-                <option id="book" value="book">Book</option>
-                <option id="movie" value="movie">Movie</option>
-              </select>
+
+            <p>Are you a rebel or do prefer to be by the book</p>
+                <input type="checkbox" name="characterQ" value="rebel">Rebel<br>
+                <input type="checkbox" name="characterQ" value="conform">Conformist<br>
+
+            <p>Are you a go-getter?</p>
+                <input type="checkbox" name="characterQ" value="ambitious">Ambitious<br>
+                <input type="checkbox" name="characterQ" value="lazy">Lazy<br>
+
+            <p>Do you prefer a good book or a good movie</p>
+                <input type="checkbox" name="characterQ" value="book">Book<br>
+                <input type="checkbox" name="characterQ" value="movie">Movie<br>
+
 
             <button type="submit" class="btn btn-info">Calculate personality</button>
 
